# Dungeon-Escape

./: .gitignore  .gitmodules  CMakeLists.txt  Dungeon Escape.sln  Dungeon Escape.vcxproj  Dungeon Escape.vcxproj.filters  TODOr FILEv.txt
Debug/: Dungeon Escape.exe.recipe  Dungeon Escape.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/Dungeon Escape.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Dungeon Escape.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
assets/scripts/: Level1.lua  Level2.lua
libs/SDL2/: CMakeLists.txt
libs/SDL2_image/: CMakeLists.txt
libs/SDL2_mixer/: CMakeLists.txt
libs/SDL2_ttf/: CMakeLists.txt
libs/imgui/: CMakeLists.txt
libs/sol/: CMakeLists.txt
sandbox/Client/: CMakeLists.txt
sandbox/Cmaketests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  blah.vcxproj  blah.vcxproj.filters  cmake_install.cmake  hello.sln  hello.vcxproj  hello.vcxproj.filters  main.cpp
sandbox/Cmaketests/blah/: Blah.cpp  CMakeLists.txt  blah.vcxproj  blah.vcxproj.filters  cmake_install.cmake
sandbox/Cmaketests/blah.dir/Debug/: blah.lib.recipe
sandbox/Cmaketests/blah.dir/Debug/blah.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  blah.lastbuildstate
sandbox/Cmaketests/blah/Debug/: blah.lib
sandbox/Cmaketests/blah/blah.dir/Debug/: blah.vcxproj.FileListAbsolute.txt
sandbox/Cmaketests/blah/blah.dir/Debug/blah.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
sandbox/Cmaketests/blah/include/: Blah.h
sandbox/Cmaketests/hello.dir/Debug/: hello.exe.recipe
sandbox/Cmaketests/libs/SDL2-2.0.14/lib/x86/: CMakeLists.txt  cmake_install.cmake
sandbox/Cmaketests/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
sandbox/LuaSolCmake/: CMakeLists.txt
sandbox/LuaSolCmake/src/: main.cpp
sandbox/RenderTest/: CMakeLists.txt  copy_resources.cmake
sandbox/RenderTest/dirs/Renderer/: K9_Renderer.lib  cmake_install.cmake
sandbox/RenderTest/dirs/Renderer/libs/Glad/: cmake_install.cmake  glad.lib  k9_glad.lib
sandbox/RenderTest/dirs/Renderer/libs/SDL2/: cmake_install.cmake
sandbox/RenderTest/dirs/Renderer/libs/SDL2_image/: cmake_install.cmake
sandbox/RenderTest/dirs/Renderer/libs/SDL2_ttf/: cmake_install.cmake
sandbox/RenderTest/dirs/Renderer/libs/glm/: CTestTestfile.cmake  cmake_install.cmake
sandbox/RenderTest/dirs/Renderer/libs/glm/glm/: CTestTestfile.cmake  cmake_install.cmake
sandbox/RenderTest/dirs/Renderer/libs/imgui/: cmake_install.cmake  imgui.lib  k9_imgui.lib
sandbox/RenderTest/src/: main.cpp
sandbox/Server/: CMakeLists.txt  Server.h  main.cpp
sandbox/sdlandCmake/: CMakeLists.txt  main.cpp
sandbox/sdlandCmake/Client/: CMakeLists.txt  Client.cpp  Client.h  cmake_install.cmake  main.cpp
sandbox/sdlandCmake/Renderer/: K9_Renderer.lib  cmake_install.cmake
sandbox/sdlandCmake/Renderer/libs/Glad/: cmake_install.cmake  k9_glad.lib
sandbox/sdlandCmake/Renderer/libs/SDL2/: cmake_install.cmake
sandbox/sdlandCmake/Renderer/libs/SDL2_image/: cmake_install.cmake
sandbox/sdlandCmake/Renderer/libs/SDL2_mixer/: cmake_install.cmake
sandbox/sdlandCmake/Renderer/libs/SDL2_ttf/: cmake_install.cmake
sandbox/sdlandCmake/Renderer/libs/glm/: CTestTestfile.cmake  cmake_install.cmake
sandbox/sdlandCmake/Renderer/libs/glm/glm/: CTestTestfile.cmake  cmake_install.cmake
sandbox/sdlandCmake/Renderer/libs/imgui/: cmake_install.cmake  k9_imgui.lib
sandbox/sdlandCmake/Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
sandbox/sdlandCmake/dirs/Client/: SDL_Test_lib.lib  cmake_install.cmake
sandbox/sdlandCmake/dirs/SDL2/: cmake_install.cmake
sandbox/sdlandCmake/dirs/SDL2_image/: cmake_install.cmake
sandbox/sdlandCmake/dirs/SDL2_ttf/: cmake_install.cmake
sandbox/sdlandCmake/dirs/Server/: SDL_Test_Server.ilk  cmake_install.cmake
sandbox/sdlandCmake/dirs/glm/: CTestTestfile.cmake  cmake_install.cmake
sandbox/sdlandCmake/dirs/glm/glm/: CTestTestfile.cmake  cmake_install.cmake
sandbox/sdlandCmake/dirs/imgui/: cmake_install.cmake
sandbox/sdlandCmake/libs/Client/: CMakeLists.txt
sandbox/sdlandCmake/libs/Client/src/: Client.cpp  Client.h
sandbox/sdlandCmake/libs/SDL2-2.0.14/: CMakeLists.txt
sandbox/sdlandCmake/libs/Serializable/: CMakeLists.txt
sandbox/sdlandCmake/libs/Serializable/src/: Person.cpp  Person.h  Point.cpp  Point.h  Serializable.cpp  Serializable.h
sandbox/sdlandCmake/libs/Serialization/: CMakeLists.txt  Serializable.cpp  Serializable.h  serialization.cpp  serialization.h
sandbox/sdlandCmake/libs/Server/: CMakeLists.txt
sandbox/sdlandCmake/libs/enet/: CMakeLists.txt
sandbox/sdlandCmake/libs/glm/: CMakeLists.txt
sandbox/sdlandCmake/libs/lua/: CMakeLists.txt
sandbox/sdlandCmake/libs/sol/: CMakeLists.txt
sandbox/sdlandCmake/src/: Render2D.cpp  Render2D.h  main.cpp
sandbox/sdlandCmake/src/Client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
sandbox/sdlandCmake/src/Client/paths/enet/: cmake_install.cmake
sandbox/sdlandCmake/src/Client/paths/glm/: cmake_install.cmake  cmake_uninstall.cmake
sandbox/sdlandCmake/src/Client/paths/glm/glm/: cmake_install.cmake
sandbox/sdlandCmake/src/ClientTest/: CMakeLists.txt
sandbox/sdlandCmake/src/Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
sandbox/sdlandCmake/src/ServerTest/: CMakeLists.txt  main.cpp
sandbox/sdlandCmake/src/ServerTest/Server/: cmake_install.cmake
src/: Animation.cpp  Animation.h  AssetManager.h  Assetmanager.cpp  Collision.cpp  Collision.h  Component.h  Constants.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  FontManager.cpp  FontManager.h  Game.cpp  Game.h  Main.cpp  Map.cpp  Map.h  States.cpp  States.h  TextureManager.cpp  TextureManager.h
src/Components/: CMakeLists.txt  ColliderComponent.h  KeyboardControlComponent.h  SpriteComponent.h  (+4 more)
(+1797 files in other folders)
