add_library(imgui
		${CMAKE_CURRENT_SOURCE_DIR/imconfig.h
		${CMAKE_CURRENT_SOURCE_DIR}/imgui.h
		${CMAKE_CURRENT_SOURCE_DIR}/imgui.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/imgui_draw.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/imgui_internal.h
		${CMAKE_CURRENT_SOURCE_DIR}/imgui_widgets.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/imstb_rectpack.h
		${CMAKE_CURRENT_SOURCE_DIR}/imstb_textedit.h
		${CMAKE_CURRENT_SOURCE_DIR}/imstb_truetype.h
		${CMAKE_CURRENT_SOURCE_DIR}/imgui_demo.cpp)